# objaverse-download

./: .gitignore  CLAUDE.md  README.md  TASKS.md  download_log_0_100.json  download_log_10000_20000.json  download_log_100_200.json  download_log_1500_2500.json  download_log_20000_30000.json  download_log_200_500.json  download_log_2500_5000.json  download_log_5000_10000.json  download_log_500_1500.json  download_specific_uids.py  filter_success.py  objaverse_download.py  package.json  pnpm-lock.yaml  pyproject.toml  requirements.txt  retry_download_log_10000_20000.json  retry_download_log_100_200.json  retry_download_log_1500_2500.json  retry_download_log_20000_30000.json  retry_download_log_200_500.json  retry_download_log_2500_5000.json  retry_download_log_5000_10000.json  retry_download_log_500_1500.json  retry_failed.py  shard_download.py  test_download.py  uplload-guiide.md
logs/: retry-upload-report-1755771690922.json
scripts/: retry-upload.js  upload-model.js
