[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "objaverse-download"
version = "1.0.0"
description = "一个用于从 Objaverse 数据集下载和处理 3D 对象的 Python 包"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [
    {name = "Ray", email = "ray@example.com"},
]
keywords = ["3d", "objaverse", "download", "dataset", "glb"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

dependencies = [
    "tqdm>=4.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=6.0",
    "pytest-cov",
    "black",
    "flake8",
    "mypy",
]

[project.urls]
Homepage = "https://github.com/ray/objaverse-download"
Repository = "https://github.com/ray/objaverse-download"
Issues = "https://github.com/ray/objaverse-download/issues"

[project.scripts]
objaverse-download = "objaverse_download:main"
objaverse-test = "test_download:test_download"
objaverse-shard = "shard_download:main"
objaverse-retry = "retry_failed:main"
objaverse-filter = "filter_success:main"
objaverse-uid = "download_specific_uids:main"

[tool.hatch.build.targets.wheel]
packages = ["objaverse_download.py"]

[tool.black]
line-length = 88
target-version = ['py38']

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]